# bashgym

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  LICENSE  README.md  Start-BashGym.ps1  TODOS.md  WORKSTREAMS.md  cleancontrol.json  conftest.py  dev.ps1  dev.sh  docker-compose.yml  find_port.ps1  fly.toml  kill_api.ps1  main.py  pyproject.toml  requirements-nemo.txt  requirements-training.txt  requirements.txt  run_backend.py  start_api.py  test_data_pipeline.py  test_evaluator_e2e.py
.claude/: settings.local.json
.design-sync/: NOTES.md  config.json  conventions.md
.github/: black-baseline.txt  pull_request_template.md
.github/workflows/: ci.yml
assistant/: .env.example  Dockerfile
assistant/config/: config.example.json
assistant/picoclaw/: .dockerignore  .gitignore  Dockerfile  Makefile  README.ja.md  README.md  README.zh.md  docker-compose.yml
assistant/workspace/: AGENT.md  IDENTITY.md  SOUL.md  USER.example.md  USER.md
bashgym/: __init__.py  _compat.py  api_base.py  cli.py  config.py  context_authority.py  device_discovery.py  device_registry.py  main.py  operator_skills.py  run_cards.py  secrets.py
bashgym/achievements/: __init__.py  definitions.py  engine.py  stats_engine.py
bashgym/agent/: __init__.py  hf_context_tools.py  memory.py  skill_lab_tools.py  tools.py
bashgym/api/: __init__.py  achievements_routes.py  agent_routes.py  auth.py  auth_routes.py  autoresearch_routes.py  campaign_agent_routes.py  campaign_recovery_routes.py  campaign_routes.py  campaign_setup_routes.py  cascade_routes.py  database.py  dev_routes.py  device_routes.py  device_schemas.py  environment_routes.py  eval_routes.py  factory_routes.py  hf_context_routes.py  hf_routes.py  integration_routes.py  knowledge_routes.py  ledger_routes.py  mcp_routes.py  models_routes.py  observability_routes.py  orchestrator_routes.py  pipeline_routes.py  research_routes.py  routes.py  runtime_observer.py  runtime_routes.py  schemas.py  security_routes.py  settings_routes.py  skill_lab_routes.py  source_routes.py  system_info.py  trace_cache.py  training_monitor.py  (+3 more)
bashgym/arena/: __init__.py  runner.py  sandbox.py
bashgym/campaigns/: __init__.py  activation.py  artifacts.py  auth.py  autoresearch.py  campaign_agent_contracts.py  campaign_agent_sessions.py  campaign_agents.py  campaign_recovery.py  client.py  contracts.py  control_room.py  control_smoke.py  evaluation.py  executors.py  export.py  guided_setup.py  history_import.py  human_oversight.py  installation.py  lineage.py  metrics.py  model_onboarding.py  nemo_gym_evidence.py  nemo_gym_ingestion.py  nemo_rl.py  nemo_rl_installation.py  nemo_rl_runner.py  persistence.py  proposals.py  readiness.py  registry_sync.py  remote.py  reporting.py  research_diagnostics.py  runtime.py  service.py  transitions.py  visibility.py  worker.py  (+1 more)
bashgym/compute/: __init__.py  activation.py  targets.py
bashgym/core/: __init__.py  instrumentation.py
bashgym/datasets/: contracts.py  converters.py  decontaminate.py  masking.py  mixer.py  validator.py
bashgym/environments/: __init__.py  builder.py  canaries.py  contracts.py  decontaminate.py  loader.py  metrics.py  nemo_gym.py  rollout.py  star_count.py  tmax_importer.py
bashgym/eval/: __init__.py  benchmarks_ext.py  dppo_replay.py  environment_holdout.py  environment_passk.py  (+13 more)
diagrams/: context-freshness-order.excalidraw  context-freshness-order.mmd  voice-agent-loop.excalidraw
docker/: Dockerfile.arena  Dockerfile.sandbox  docker-compose.yml
docs/: API.md  FRONTEND_DESIGN_GUIDELINES.md  GEMMA4_12B_NVFP4.md  GETTING_STARTED.md  NVIDIA_FEEDBACK.md  PLATFORM_OVERVIEW.md  PRODUCTIZATION.md  TRAINING_ARTIFACT_STORAGE.md  TRAINING_DATA_GUIDE.md  TRAINING_SETUP.md  autoresearch-detailed-outline.md  hermes-agent-endpoints.md  presentation-talking-points.md  training-config-guide.md
frontend/: .env.web  .eslintrc.cjs  .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.browser.config.ts  vite.config.js  vite.config.ts  vite.config.web.ts
launch-video/: README.md  build.py  generate_music.py  render_video.py  storyboard.md  voiceover.txt
scripts/: benchmark_finetuned_vs_base.py  benchmark_nvfp4_canary.py  benchmark_three_models.py  check_black_baseline.py  convert_training_markdown_to_docx.py  eval_finetuned.py  export_unsloth.py  extract_dpo_pairs_from_traces.py  fix_training_data.py  full_pipeline_rebuild.py  generate_dpo_dataset.py  postprocess_dpo.py  rebuild_training_data.py  run_cascade_real.py  run_dpo_training.py  run_star_count_vlm.py  serve_gemma4_12b_nvfp4.sh  setup_dgx_serve.sh  smoke_test_finetuned.py  test_finetuned_thorough.py  train_model.py  validate_dataset.py  validate_markdown_links.py  validate_training_data.py
tasks/: archived-completed-before-2026-06-22.md  bashgym-cli-spec-2026-06-17.md  data-designer-upgrade-plan-2026-06-16.md  eval-and-data-strategy-2026-06-11.md  firecrawl-research-integration-plan-2026-06-17.md  gx10-training-smoke-plan-2026-06-24.md  human-decisions-source-compute-2026-06-29.md  implementation-report-2026-06-16.md  jepa-bashgym-action-plan-2026-06-23.md  jepa-training-docs-handoff-2026-06-23.md  jepa-worldmodel-hardware-handoff-2026-06-23.md  lessons.md  platform-recap-2026-06-16.md  rlhf-aligned-implementation-segments-2026-06-29.md  rlhf-implementation-action-board-2026-06-29.md  roadmap-2026-06-15-model-agnostic-pipeline.md  source-library-cloud-compute-action-plan-2026-06-29.md  status-review-2026-06-11.md  tmax-bashgym-action-plan-2026-06-22.md  todo.md  training-platform-button-up-plan-2026-06-23.md
tests/: test_agent_chat.py  test_bashgym.py  test_chatgpt_importer.py  test_collectors.py  test_config_logging.py  test_context_authority.py  test_hf_cloud_training.py  test_hf_integration.py  test_instrumentation_e2e.py  test_mcp_importer.py  test_package_imports.py  test_peony_memory.py  test_quality_calculator.py  test_run_cards.py  test_skill_registry.py  test_tool_registry.py
(+988 files in other folders)
